--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,6 @@ max_line_length = 120
 tab_width = 2
 trim_trailing_whitespace = true
 
-[.py]
+[*.py]
+indent_style = space
 indent_size = 4
-tab_width = 4
